--- a/styele.css
+++ b/styele.css
@@ -108,6 +108,7 @@ dl {
 .contact dl textarea {
     width: 100%;
     height: 12em;
+    resize: vertical;
 }
 .contact dl dd input {
     width: 100%;
@@ -167,4 +168,4 @@ dl {
     .contact dl dt {
         padding-top: 0;
     }
-}
+}   
